# ume

./: .charted.hcl  .charted.toml  .dockerignore  .envrc  .eslintignore  .eslintrc.json  .gitignore  .golangci.yml  .goreleaser.yml  .travis.yml  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.rs  bun.lockb  clippy.toml  default.nix  deny.toml  flake.nix  go.mod  go.sum  goreleaser.Dockerfile  jest.config.js  main.go  mix.exs  package-lock.json  package.json  renovate.json  rust-toolchain.toml  rustfmt.toml  shell.nix  tsconfig.json
.cargo/: config.toml
.ci/: _shared.ps1  _shared.sh
.ci/linux/: release
.ci/macos/: release
.ci/windows/: Install-Libraries.ps1  Release.ps1  Setup-Vcpkg.ps1
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: CI.yaml  Deploy.yml  Helm.yaml  Release.yaml  codeql_analysis.yml  golangci.yml  pr.yml  push.yml  release.yml  update.yml
.noel/deployment/: .terraform.lock.hcl  main.tf  vars.tf
.noel/deployment/charts/: ume.yaml
.zed/: settings.json
cmd/build-date/: main.go
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
distribution/docker/: README.md  alpine.Dockerfile  debian.Dockerfile
distribution/docker/config/: ume.hcl
distribution/docker/scripts/: docker-entrypoint.sh  liblog.sh
distribution/helm/: .charted.yaml  .gitkeep  .helmignore  .prettierrc.json  Chart.yaml  README.md  values.yaml  values.yml
distribution/helm/scripts/: update-values
distribution/helm/templates/: Deployment.yaml  NOTES.txt  _helpers.tpl  pvc.yaml  service.yaml
distribution/helm/templates/secrets/: gridfs.yaml
docker/: docker-entrypoint.sh  runner.sh
docker/scripts/: libconfig.sh  liblog.sh
internal/: constants.go
lib/: ume.ex  ume_web.ex
lib/ume/: application.ex
lib/ume_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/ume_web/channels/: user_socket.ex
lib/ume_web/controllers/: main_controller.ex
lib/ume_web/views/: error_helpers.ex  error_view.ex
mongo/: database.go
nix/: common.nix  devshell.nix  package.nix
release/: Dockerfile
routing/: images.go  index.go
scripts/: config.js  constants.js  master-key.js  release.ps1  release.sh
src/: app.js  catchers.rs  index.ts  lib.rs  main.rs  main.ts  server.rs
src/@types/: env.d.ts
src/cli/: config.rs  mod.rs  types.rs  version.rs
src/cli/cmds/: completions.rs  mod.rs  screenshot.rs  server.rs  sharex.rs
src/cli/commands/: mod.rs  openapi.rs  screenshot.rs  server.rs
src/cli/commands/generate/: config.rs  mod.rs  sharex.rs
src/cli/config/: system_notifications.rs  uploader.rs
src/config/: from_env.rs  logging.rs  merge.rs  mod.rs  storage.rs  tracing.rs  util.rs
src/config/merge/: strategy.rs
src/config/tracing/: otel.rs  sentry.rs
src/endpoints/: MainEndpoint.ts
src/logging/: generic.rs  mod.rs
src/middleware/: cors.ts  index.ts  logging.ts  poweredBy.ts
src/providers/: mod.rs  provider.rs
src/routes/: index.js  main.js  mod.rs
src/server/: config.rs  extract.rs  middleware.rs  mod.rs  routes.rs
src/server/config/: ssl.rs
src/server/middleware/: log.rs  master_key.rs  mod.rs  request_id.rs
src/storage/: config.rs  gridfs.rs  mod.rs
src/storage/gridfs/: config.rs
src/structures/: Config.ts  Database.js  Endpoint.ts  Logger.js  Logger.ts  Provider.ts  RatelimitHandler.ts  Route.js  Server.js  Server.ts  index.ts
src/structures/decorators/: Route.ts
src/structures/managers/: EndpointManager.ts  MiddlewareManager.ts
src/structures/providers/: FilesystemProvider.ts  GCSProvider.ts
src/util/: GarbageCollector.js  dateformat.js  index.js  index.ts
test/support/: channel_case.ex  conn_case.ex
test/ume_web/views/: error_view_test.exs
tests/: Features.spec.js  Utils.spec.js
util/: env.go  util.go
