# 🐻‍❄️💐 ume: Easy, self-hostable, and flexible image host made in Rust
# Copyright 2021-2024 Noel Towa <cutie@floofy.dev>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "ume"
description = "🐻‍❄️💐 Easy, self-hostable, and flexible image host made in Rust"
version = "4.0.6"
authors = ["Noel Towa <cutie@floofy.dev>"]
edition = "2021"
rust-version = "1.78"
repository = "https://github.com/auguwu/ume"

[[bin]]
name = "ume"
path = "./src/bin/ume.rs"

[dependencies]
arboard = "3.4.0"
async-trait = "0.1.80"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
bson = "2.10.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
clap_complete = "4.5.2"
color-eyre = { version = "0.6.3", features = ["issue-url", "tracing-error"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
futures-util = "0.3.31"
hcl-rs = "0.18.0"
humantime = "2.1.0"
image = "0.25.1"
mimalloc = "0.1.41"
mime = "0.3.17"
multer = "3.1.0"
num_cpus = "1.16.0"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto"] }
opentelemetry_sdk = "0.22.1"
owo-colors = "4.0.0"
rand = "0.8.5"
remi = "0.8.0"
reqwest = { version = "0.12.4", features = ["multipart", "json"] }
sentry = "0.34.0"
sentry-tower = { version = "0.34.0", features = ["axum", "http"] }
sentry-tracing = "0.34.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io-util"] }
tower-http = { version = "0.6.0", features = ["catch-panic"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"
url = "2.5.0"
which = "6.0.1"

[dependencies.azalia]
version = "0.1.0"
git = "https://github.com/Noelware/azalia"
rev = "bac66caead3a068a2e7796473af111485b7dcb49"
features = [
    "lazy",
    "regex",

    "config",
    "config-derive",

    "log",
    "log-writers",

    "remi",
    "remi-all",
    "remi-serde",
    "remi-tracing",
    "remi-export-crates",

    "serde",
    "serde-tracing",
]

[build-dependencies]
chrono = "0.4.38"
rustc_version = "0.4.0"
which = "6.0.1"

[dev-dependencies]
quote = "1.0.36"
syn = "2.0.60"

[package.metadata.cargo-machete]
ignored = [
    "hcl-rs", # crate name is `hcl` but crates.io name is `hcl-rs`
]
