# 🐻‍❄️💐 ume: Easy, self-hostable, and flexible image host made in Rust
# Copyright 2021-2025 Noel Towa <cutie@floofy.dev>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "ume"
description = "🐻‍❄️💐 Easy, self-hostable, and flexible image host made in Rust"
version = "4.0.6"
authors = ["Noel Towa <cutie@floofy.dev>"]
edition = "2021"
repository = "https://github.com/auguwu/ume"

[[bin]]
name = "ume"
path = "./src/bin/ume.rs"

[dependencies]
arboard = "3.4.1"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive", "env"] }
clap_complete = "4.5.44"
color-eyre = { version = "0.6.3", features = ["issue-url", "tracing-error"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
hcl-rs = "0.18.4"
humantime = "2.1.0"
image = "0.25.5"
mimalloc = "0.1.43"
mime = "0.3.17"
multer = "3.1.0"
num_cpus = "1.16.0"
opentelemetry = "0.27.1"
opentelemetry-otlp = { version = "0.27.0", features = ["http-proto"] }
opentelemetry_sdk = "0.27.1"
owo-colors = "4.1.0"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["multipart", "json"] }
sentry = "0.36.0"
sentry-tower = { version = "0.36.0", features = ["axum", "http"] }
sentry-tracing = "0.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["catch-panic"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.19"
url = "2.5.4"
which = "7.0.1"

[dependencies.azalia]
version = "0.1.0"
git = "https://github.com/Noelware/azalia"
rev = "f4600130658cfe523350222717b4530ce4d30123"
features = [
    "lazy",
    "regex",

    "config",
    "config-derive",

    "log",
    "log-writers",

    "remi",
    "remi-all",
    "remi-serde",
    "remi-tracing",
    "remi-export-crates",

    "serde",
    "serde-tracing",
]

[build-dependencies]
chrono = "0.4.39"
rustc_version = "0.4.1"
which = "7.0.1"

# this is only here to fix conflicts between dependencies
# i wish i would've done farming instead of this shit
[dev-dependencies]
proc-macro2 = "1.0.93"

[package.metadata.cargo-machete]
ignored = [
    "hcl-rs", # crate name is `hcl` but crates.io name is `hcl-rs`
]
